--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow/tfjs-node": "^2.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.715.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "jimp": "^0.14.0",
+    "node-gyp": "^7.0.0",
+    "node-pre-gyp": "^0.15.0",
     "react": "^16.13.1",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "speak-tts": "^2.0.8",
+    "uifx": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
